--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     header .subtitle { font-size: .9rem; color: var(--muted); }
     main { max-width: 960px; margin: 24px auto; padding: 0 16px; }
     .card { background: var(--card); border: 1px solid var(--border); border-radius: 12px; padding: 16px; box-shadow: 0 1px 2px rgba(0,0,0,0.04); }
-    .row { display: grid; grid-template-columns: 1fr; gap: 16px; }
-    @media (min-width: 800px) { .row { grid-template-columns: 1fr 1fr; } }
-    label { font-weight: 600; display: block; margin-bottom: 8px; }
-    select, input[type="search"] { width: 100%; padding: 10px 12px; border: 1px solid var(--border); border-radius: 8px; font-size: 1rem; }
+    label { font-weight: 600; display: block; margin: 12px 0 8px; }
+    select { width: 100%; padding: 10px 12px; border: 1px solid var(--border); border-radius: 8px; font-size: 1rem; }
     .section-title { font-size: 1.1rem; font-weight: 700; margin: 0 0 8px; }
     .hint { color: var(--muted); font-size: .9rem; }
     .panel { margin-top: 12px; padding: 12px; border: 1px dashed var(--border); border-radius: 8px; background: #fff; }
@@ -46,6 +44,7 @@
   </header>
   <main>
     <div class="card">
+      <!-- Category selector -->
       <label for="category">Select category</label>
       <select id="category" aria-label="Select reporting category">
         <option value="us">Honeywell US</option>
@@ -53,53 +52,44 @@
         <option value="contingent">Contingent Labor Providers</option>
       </select>
 
+      <!-- US -->
       <div id="us-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – US <span class="badge">Care On Site</span></div>
-        <div class="row">
-          <div>
-            <div class="hint">Scan QR or call immediately</div>
-            <div class="qr" id="us-qr"><span>No QR set</span></div>
-          </div>
-          <div>
-            <div class="contacts">
-              <strong>Phone:</strong> <span id="us-phone"></span>
-              <br/>
-              <strong>Important:</strong> <span id="us-note"></span>
-            </div>
-          </div>
+        <div class="hint">Scan QR or call immediately</div>
+        <div class="qr" id="us-qr"><span>No QR set</span></div>
+        <div class="contacts" style="margin-top:8px">
+          <strong>Phone:</strong> <span id="us-phone"></span><br/>
+          <strong>Important:</strong> <span id="us-note"></span>
         </div>
       </div>
 
+      <!-- Canada -->
       <div id="ca-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – Canada <span class="badge">Windley Ely Nurse Triage</span></div>
-        <div class="row">
-          <div>
-            <div class="hint">Scan QR or call immediately</div>
-            <div class="qr" id="ca-qr"><span>No QR set</span></div>
-          </div>
-          <div>
-            <div class="contacts">
-              <strong>Phone:</strong> <span id="ca-phone"></span>
-              <br/>
-              <strong>Important:</strong> <span id="ca-note"></span>
-            </div>
-          </div>
+        <div class="hint">Scan QR or call immediately</div>
+        <div class="qr" id="ca-qr"><span>No QR set</span></div>
+        <div class="contacts" style="margin-top:8px">
+          <strong>Phone:</strong> <span id="ca-phone"></span><br/>
+          <strong>Important:</strong> <span id="ca-note"></span>
         </div>
       </div>
 
+      <!-- Contingent -->
       <div id="cont-panel" class="panel" hidden>
         <div class="section-title">Contingent Labor Providers</div>
         <div class="hint" id="cont-msg"></div>
-        <div class="row" style="margin-top:12px">
-          <div>
-            <label for="provider">Select staffing company</label>
-            <input type="search" id="provider-search" placeholder="Type to filter companies…" aria-label="Filter companies" />
-            <select id="provider" size="8" aria-label="Select staffing company" style="margin-top:8px"></select>
-          </div>
-          <div>
-            <div class="contacts" id="provider-contact">Select a company to view HSE contact details.</div>
-            <div class="copy"><button class="copy-btn" id="copy-btn" disabled>Copy contact details</button></div>
-          </div>
+
+        <!-- Single dropdown of all staffing companies -->
+        <label for="provider">Select staffing company</label>
+        <select id="provider" aria-label="Select staffing company"></select>
+
+        <!-- Details appear immediately after selection -->
+        <div class="contacts" id="provider-contact" style="margin-top:8px">
+          Select a company to view HSE contact details.
+        </div>
+
+        <div class="copy">
+          <button class="copy-btn" id="copy-btn" disabled>Copy contact details</button>
         </div>
       </div>
     </div>
@@ -135,41 +125,41 @@
         Object.values(panels).forEach(id => document.getElementById(id).hidden = true);
         document.getElementById(panels[key]).hidden = false;
       };
-      showPanel('us');
+      showPanel('contingent'); // default to contingent as requested behavior
       category.addEventListener('change', e => showPanel(e.target.value));
 
       // US
       document.getElementById('us-phone').textContent = data.honeywellUS.phone || '';
       document.getElementById('us-note').textContent = data.honeywellUS.note || data.messages.usSupervisor || '';
-      const usQr = document.getElementById('us-qr');
-      usQr.innerHTML = data.honeywellUS.qrImageUrl ? `<img src="${data.honeywellUS.qrImageUrl}" alt="US QR" />` : '<span>No QR set</span>';
+      document.getElementById('us-qr').innerHTML =
+        data.honeywellUS.qrImageUrl ? `<img src="${data.honeywellUS.qrImageUrl}" alt="US QR">` : '<span>No QR set</span>';
 
       // Canada
       document.getElementById('ca-phone').textContent = data.honeywellCanada.phone || '';
       document.getElementById('ca-note').textContent = data.honeywellCanada.note || data.messages.usSupervisor || '';
-      const caQr = document.getElementById('ca-qr');
-      caQr.innerHTML = data.honeywellCanada.qrImageUrl ? `<img src="${data.honeywellCanada.qrImageUrl}" alt="Canada QR" />` : '<span>No QR set</span>';
+      document.getElementById('ca-qr').innerHTML =
+        data.honeywellCanada.qrImageUrl ? `<img src="${data.honeywellCanada.qrImageUrl}" alt="Canada QR">` : '<span>No QR set</span>';
 
       // Contingent
       document.getElementById('cont-msg').textContent = data.messages.contingent || '';
       const select = document.getElementById('provider');
-      const search = document.getElementById('provider-search');
       const contactBox = document.getElementById('provider-contact');
       const copyBtn = document.getElementById('copy-btn');
 
-      const providers = (data.contingentProviders || []).slice();
-      const renderOptions = list => {
-        select.innerHTML = '';
-        list.forEach(p => {
-          const opt = document.createElement('option');
-          opt.value = p.name;
-          opt.textContent = p.name;
-          select.appendChild(opt);
-        });
-      };
-      renderOptions(providers);
+      // Populate single dropdown with ALL providers
+      const providers = (data.contingentProviders || []).slice().sort((a,b) =>
+        a.name.toLowerCase().localeCompare(b.name.toLowerCase())
+      );
+      select.innerHTML = '<option value="">— Select company —</option>';
+      providers.forEach(p => {
+        const opt = document.createElement('option');
+        opt.value = p.name;
+        opt.textContent = p.name;
+        select.appendChild(opt);
+      });
 
-      const updateContact = () => {
+      // Show details immediately on selection
+      select.addEventListener('change', () => {
         const sel = select.value;
         const p = providers.find(x => x.name === sel);
         if (p) {
@@ -179,18 +169,14 @@
           contactBox.textContent = 'Select a company to view HSE contact details.';
           copyBtn.disabled = true;
         }
-      };
-      select.addEventListener('change', updateContact);
-
-      search.addEventListener('input', () => {
-        const q = search.value.toLowerCase();
-        const filtered = providers.filter(p => p.name.toLowerCase().includes(q));
-        renderOptions(filtered);
-        updateContact();
       });
 
       copyBtn.addEventListener('click', async () => {
-        try { await navigator.clipboard.writeText(contactBox.textContent); copyBtn.textContent = 'Copied!'; setTimeout(() => copyBtn.textContent = 'Copy contact details', 1500); } catch (e) {}
+        try {
+          await navigator.clipboard.writeText(contactBox.textContent);
+          copyBtn.textContent = 'Copied!';
+          setTimeout(() => (copyBtn.textContent = 'Copy contact details'), 1500);
+        } catch (e) {}
       });
     }
 
@@ -198,3 +184,4 @@
   </script>
 </body>
 </html>
+``
