--- a/index.html
+++ b/index.html
@@ -6,35 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Honeywell Incident Reporting – Quick Links</title>
   <style>
-    :root {
-      --brand-red: #e31e24;
-      --text: #1a1a1a;
-      --muted: #666;
-      --bg: #f7f7f8;
-      --card: #ffffff;
-      --border: #ddd;
-    }
-    * { box-sizing: border-box; }
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif; margin: 0; background: var(--bg); color: var(--text); }
-    header { background: var(--card); border-bottom: 1px solid var(--border); padding: 16px 20px; }
-    header h1 { margin: 0; font-size: 1.2rem; font-weight: 700; }
-    header .subtitle { font-size: .9rem; color: var(--muted); }
-    main { max-width: 960px; margin: 24px auto; padding: 0 16px; }
-    .card { background: var(--card); border: 1px solid var(--border); border-radius: 12px; padding: 16px; box-shadow: 0 1px 2px rgba(0,0,0,0.04); }
-    label { font-weight: 600; display: block; margin: 12px 0 8px; }
-    select { width: 100%; padding: 10px 12px; border: 1px solid var(--border); border-radius: 8px; font-size: 1rem; }
-    .section-title { font-size: 1.1rem; font-weight: 700; margin: 0 0 8px; }
-    .hint { color: var(--muted); font-size: .9rem; }
-    .panel { margin-top: 12px; padding: 12px; border: 1px dashed var(--border); border-radius: 8px; background: #fff; }
-    .qr { width: 140px; height: 140px; border: 1px solid var(--border); border-radius: 8px; display: grid; place-items: center; overflow: hidden; background: #fafafa; }
-    .qr img { width: 100%; height: 100%; object-fit: cover; }
-    .contacts { white-space: pre-wrap; }
-    .brand { color: var(--brand-red); font-weight: 800; }
-    .footer { color: var(--muted); font-size: .85rem; text-align: center; margin: 24px 0 40px; }
-    .badge { display: inline-block; background: #f2f2f2; color: #333; border: 1px solid var(--border); border-radius: 999px; padding: 2px 8px; font-size: .8rem; margin-left: 8px; }
-    .copy { margin-top: 8px; }
-    button.copy-btn { padding: 8px 10px; border: 1px solid var(--border); border-radius: 8px; background: #fff; cursor: pointer; }
-    button.copy-btn:hover { background: #f6f6f6; }
+    :root { --brand-red:#e31e24; --text:#1a1a1a; --muted:#666; --bg:#f7f7f8; --card:#fff; --border:#ddd; }
+    * { box-sizing:border-box; }
+    body { font-family: system-ui,-apple-system,'Segoe UI',Roboto,Arial,sans-serif; margin:0; background:var(--bg); color:var(--text); }
+    header { background:var(--card); border-bottom:1px solid var(--border); padding:16px 20px; }
+    header h1 { margin:0; font-size:1.2rem; font-weight:700; }
+    header .subtitle { font-size:.9rem; color:var(--muted); }
+    main { max-width:960px; margin:24px auto; padding:0 16px; }
+    .card { background:var(--card); border:1px solid var(--border); border-radius:12px; padding:16px; box-shadow:0 1px 2px rgba(0,0,0,.04); }
+    label { font-weight:600; display:block; margin:12px 0 8px; }
+    select { width:100%; padding:10px 12px; border:1px solid var(--border); border-radius:8px; font-size:1rem; }
+    .section-title { font-size:1.1rem; font-weight:700; margin:0 0 8px; }
+    .hint { color:var(--muted); font-size:.9rem; }
+    .panel { margin-top:12px; padding:12px; border:1px dashed var(--border); border-radius:8px; background:#fff; }
+    .qr { width:140px; height:140px; border:1px solid var(--border); border-radius:8px; display:grid; place-items:center; overflow:hidden; background:#fafafa; }
+    .contacts { white-space:pre-wrap; }
+    .brand { color:var(--brand-red); font-weight:800; }
+    .footer { color:var(--muted); font-size:.85rem; text-align:center; margin:24px 0 40px; }
+    .badge { display:inline-block; background:#f2f2f2; color:#333; border:1px solid var(--border); border-radius:999px; padding:2px 8px; font-size:.8rem; margin-left:8px; }
+    .copy { margin-top:8px; }
+    button.copy-btn { padding:8px 10px; border:1px solid var(--border); border-radius:8px; background:#fff; cursor:pointer; }
+    button.copy-btn:hover { background:#f6f6f6; }
   </style>
 </head>
 <body>
@@ -44,40 +36,19 @@
   </header>
   <main>
     <div class="card">
-      <!-- Category selector -->
       <label for="category">Select category</label>
       <select id="category" aria-label="Select reporting category">
+        <option value="contingent">Contingent Labor Providers</option>
         <option value="us">Honeywell US</option>
         <option value="canada">Honeywell Canada</option>
-        <option value="contingent">Contingent Labor Providers</option>
       </select>
 
-      <!-- US -->
-      <div id="us-panel" class="panel" hidden>
-        <div class="section-title">Honeywell Employees – US <span class="badge">Care On Site</span></div>
-        <div class="hint">Scan QR or call immediately</div>
-        <div class="qr" id="us-qr"><span>No QR set</span></div>
-        <div class="contacts" style="margin-top:8px">
-          <strong>Phone:</strong> <span id="us-phone"></span><br/>
-          <strong>Important:</strong> <span id="us-note"></span>
-        </div>
-      </div>
-
-      <!-- Canada -->
-      <div id="ca-panel" class="panel" hidden>
-        <div class="section-title">Honeywell Employees – Canada <span class="badge">Windley Ely Nurse Triage</span></div>
-        <div class="hint">Scan QR or call immediately</div>
-        <div class="qr" id="ca-qr"><span>No QR set</span></div>
-        <div class="contacts" style="margin-top:8px">
-          <strong>Phone:</strong> <span id="ca-phone"></span><br/>
-          <strong>Important:</strong> <span id="ca-note"></span>
-        </div>
-      </div>
-
       <!-- Contingent -->
-      <div id="cont-panel" class="panel" hidden>
+      <div id="cont-panel" class="panel">
         <div class="section-title">Contingent Labor Providers</div>
-        <div class="hint" id="cont-msg"></div>
+        <div class="hint" id="cont-msg">
+          Please notify your Honeywell Supervisor about your incident first. Then, select your staffing company to view contact details for reporting.
+        </div>
 
         <!-- Single dropdown of all staffing companies -->
         <label for="provider">Select staffing company</label>
@@ -92,76 +63,94 @@
           <button class="copy-btn" id="copy-btn" disabled>Copy contact details</button>
         </div>
       </div>
+
+      <!-- US -->
+      <div id="us-panel" class="panel" hidden>
+        <div class="section-title">Honeywell Employees – US <span class="badge">Care On Site</span></div>
+        <div class="hint">Scan QR or call immediately</div>
+        <div class="qr" id="us-qr"><span>No QR set</span></div>
+        <div class="contacts" style="margin-top:8px">
+          <strong>Phone:</strong> <span id="us-phone">844-501-2273</span><br/>
+          <strong>Important:</strong> <span id="us-note">Please report all work related injuries immediately to your supervisor.</span>
+        </div>
+      </div>
+
+      <!-- Canada -->
+      <div id="ca-panel" class="panel" hidden>
+        <div class="section-title">Honeywell Employees – Canada <span class="badge">Windley Ely Nurse Triage</span></div>
+        <div class="hint">Scan QR or call immediately</div>
+        <div class="qr" id="ca-qr"><span>No QR set</span></div>
+        <div class="contacts" style="margin-top:8px">
+          <strong>Phone:</strong> <span id="ca-phone">877-424-5256</span><br/>
+          <strong>Important:</strong> <span id="ca-note">Please report all work related injuries immediately to your supervisor.</span>
+        </div>
+      </div>
     </div>
 
-    <div class="footer">This page works offline after the first load. Add QR image paths in <code>contact-data.json</code> if available.</div>
+    <div class="footer">This page works offline after the first load. QR images can be added later.</div>
   </main>
 
   <script>
-    async function loadData() {
-      try {
-        const res = await fetch('contact-data.json');
-        const data = await res.json();
-        initUI(data);
-      } catch (e) {
-        console.error('Failed to load contact-data.json', e);
-        const fallback = {
-          messages: {
-            contingent: 'Please notify your Honeywell Supervisor about your incident first. Then, select your staffing company to view contact details for reporting.',
-            usSupervisor: 'Please report all work related injuries immediately to your supervisor.'
-          },
-          honeywellUS: { service: 'Care On Site', phone: '844-501-2273', note: 'Please report all work related injuries immediately to your supervisor.', qrImageUrl: '' },
-          honeywellCanada: { service: 'Windley Ely Nurse Triage', phone: '877-424-5256', note: 'Please report all work related injuries immediately to your supervisor.', qrImageUrl: '' },
-          contingentProviders: []
-        };
-        initUI(fallback);
-      }
-    }
+    // Full provider list is embedded below (parsed from your Excel).
+    const contingentProviders = [
+      {"name":"Acro","contact":"David McKinney, HR Generalist; dmckinney@acrocorp.com; (734) 629-5283"},
+      {"name":"Akkodis","contact":"AkkodisAssociateSupport@akkodisgroup.com; 844-875-5746; Escalations: Nilsa.Edwards@akkodisgroup.com; Susan.Anderson@akkoidgroup.com"},
+      {"name":"Artech Information Systems","contact":"Sunitha.Krishnamurthy@artech.com; Office: 973-998-2527; Fax: 973-998-2599"},
+      {"name":"Aversan","contact":"melissa@aversan.com; Office: 416-201-0442 x1011; Cell: 647-456-1060"},
+      {"name":"BEPC Inc.","contact":"Nolan.Hearn@bepcinc.com; Mobile: 325-277-4014; Office: 325-944-0169 x106"},
+      {"name":"CCL Contracts Consultancy, Inc.","contact":"arlene.johnson@cclglobal.com; 832-620-3452"},
+      {"name":"Datamatics Global Services Inc","contact":"Beth_Smiley@datamaticstech.com; ushr@datamatics.com; MSP_Onboarding@datamaticstech.com; Ashok Kumar: (734) 407-1005; Text: (716) 437-6350"},
+      {"name":"GDKN","contact":"Sunz Insurance Company; 877-306-2398"},
+      {"name":"Idexcel Inc","contact":"mkhan@idexcel.com; 703-230-2640; rpatrick@idexcel.com; 972-241-6707; 972-839-4398"},
+      {"name":"Infotree Service, Inc.","contact":"ckulinski@infotreeglobal.com; 734-927-3143"},
+      {"name":"Integrity - EDS -","contact":"shereena.smith@integrity-eds.com; P: (866) 509-4377; M: (602) 821-9077"},
+      {"name":"Intelliswift","contact":"amber.howard@intelliswift.com; hr@intelliswift.com; (510) 695-2632"},
+      {"name":"Intertec Engineering, LLC","contact":"Charles.jonkosky@intertecintl.com; C: 602-570-3869; Backup: Joshua.Hedeby@intertecintl.com; C: 480-319-4930"},
+      {"name":"Jobs R Us (Cor-Tech LLC)","contact":"Tempe/Glendale: gpalomino@cor-tech.net, (510) 921-0599; Illinois: tostrander@cor-tech.net, (608) 931-5802; El Paso: cortega@cor-tech.net, (951) 886-8118; All other sites: jcwilliams@cor-tech.net, (404) 453-6837"},
+      {"name":"Kronos Consulting","contact":"Andrew.Gabriel@kronosconsulting.net; 480-900-7222; 602-677-1163; Marrie.deleon@Kronosconsulting.net; 480-581-4026"},
+      {"name":"Launch Technical Workforce","contact":"Workers’ Comp: 888-888-7195 option 5; safety@launchtws.com"},
+      {"name":"Lancesoft, Inc.","contact":"Veronica.Jones@lancesoft.com; 703-674-4543"},
+      {"name":"Manpower","contact":"Regional contacts: Jeff.parker@manpower.com (818.235.8899 / 213.519.7692); Michael.jin@manpower.com (425.531.2794); Erran.schmidkonz@manpower.com (847.689.2217); Sara.barton@manpower.com (913.221.0837); Theresa.delvecchio@manpower.com (203.859.3597); Jennifer.Tackett@manpower.com (614.822.9473 / 614.305.1931); Jonathan.williams@manpower.com (915.820.2754 / 915.307.9218)"},
+      {"name":"NESCO Resource","contact":"Paul Chacon; 312-444-9972; pchacon@nescoresource.com"},
+      {"name":"Pacer Staffing","contact":"ecare@pacerstaffing.com; (215) 966-8380 / (717)-385-6962; Safety: Sargam.Dubey@pacerstaffing.com (215) 966-8380; Emergency: Moon.Rana@pacerstaffng.com (717)-385-6962; Nurse line: (866) 204-0683"},
+      {"name":"PDS Tech","contact":"WC Central: 1-833-470-6688; workerscompsupport@adeccogroup.com (8am–8pm EST); After hours Nurse: 1-855-293-4222"},
+      {"name":"Pyramid Consulting, Inc.","contact":"Yensy.parra@pyramidci.com; 214-715-5632"},
+      {"name":"Responsible Staffing (RA Safety Staffing)","contact":"donald@rasafetystaffing.com; 225-333-8035"},
+      {"name":"Select Source International (SSI)","contact":"Afterhours: 1.866.687.0710; KektiJ@selectsourceintl.com; 612-474-9567"},
+      {"name":"TAD PGS","contact":"Adecco WC: 1-833-470-6688 (8am–8pm EST); Clinical Consult: 1-855-293-4222 (after hours)"},
+      {"name":"Talascend SL LLC","contact":"kim.stouffer@talascend.com; 248-537-1288; cell 248-410-9974; CC: jeannette.tousignaut@talascend.com"},
+      {"name":"Tucson Embedded Systems (TES)","contact":"NancyK@TES-i.com; O: (520) 575-7283; C: (520) 971-5593"},
+      {"name":"US Tech Solutions","contact":"health-safety@ustechsolutions.com; 201.719.9953"}
+    ];
 
-    function initUI(data) {
+    (function init() {
       const category = document.getElementById('category');
       const panels = { us: 'us-panel', canada: 'ca-panel', contingent: 'cont-panel' };
-      const showPanel = key => {
-        Object.values(panels).forEach(id => document.getElementById(id).hidden = true);
-        document.getElementById(panels[key]).hidden = false;
-      };
-      showPanel('contingent'); // default to contingent as requested behavior
+      const showPanel = key => { Object.values(panels).forEach(id => document.getElementById(id).hidden = true); document.getElementById(panels[key]).hidden = false; };
+      showPanel('contingent');
+
       category.addEventListener('change', e => showPanel(e.target.value));
 
-      // US
-      document.getElementById('us-phone').textContent = data.honeywellUS.phone || '';
-      document.getElementById('us-note').textContent = data.honeywellUS.note || data.messages.usSupervisor || '';
-      document.getElementById('us-qr').innerHTML =
-        data.honeywellUS.qrImageUrl ? `<img src="${data.honeywellUS.qrImageUrl}" alt="US QR">` : '<span>No QR set</span>';
-
-      // Canada
-      document.getElementById('ca-phone').textContent = data.honeywellCanada.phone || '';
-      document.getElementById('ca-note').textContent = data.honeywellCanada.note || data.messages.usSupervisor || '';
-      document.getElementById('ca-qr').innerHTML =
-        data.honeywellCanada.qrImageUrl ? `<img src="${data.honeywellCanada.qrImageUrl}" alt="Canada QR">` : '<span>No QR set</span>';
-
-      // Contingent
-      document.getElementById('cont-msg').textContent = data.messages.contingent || '';
+      // Populate single dropdown with ALL providers
       const select = document.getElementById('provider');
       const contactBox = document.getElementById('provider-contact');
       const copyBtn = document.getElementById('copy-btn');
 
-      // Populate single dropdown with ALL providers
-      const providers = (data.contingentProviders || []).slice().sort((a,b) =>
-        a.name.toLowerCase().localeCompare(b.name.toLowerCase())
-      );
       select.innerHTML = '<option value="">— Select company —</option>';
-      providers.forEach(p => {
-        const opt = document.createElement('option');
-        opt.value = p.name;
-        opt.textContent = p.name;
-        select.appendChild(opt);
-      });
+      contingentProviders
+        .slice()
+        .sort((a,b) => a.name.toLowerCase().localeCompare(b.name.toLowerCase()))
+        .forEach(p => {
+          const opt = document.createElement('option');
+          opt.value = p.name;
+          opt.textContent = p.name;
+          select.appendChild(opt);
+        });
 
       // Show details immediately on selection
       select.addEventListener('change', () => {
         const sel = select.value;
-        const p = providers.find(x => x.name === sel);
+        const p = contingentProviders.find(x => x.name === sel);
         if (p) {
           contactBox.textContent = p.contact || 'No contact details available.';
           copyBtn.disabled = false;
@@ -176,12 +165,8 @@
           await navigator.clipboard.writeText(contactBox.textContent);
           copyBtn.textContent = 'Copied!';
           setTimeout(() => (copyBtn.textContent = 'Copy contact details'), 1500);
-        } catch (e) {}
+               } catch (e) {}
       });
-    }
-
-    loadData();
+    })();
   </script>
 </body>
-</html>
-``
