--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Honeywell Incident Reporting – Contacts</title>
+  <title>Honeywell Incident Reporting</title>
   <style>
     :root { --brand-red:#e31e24; --text:#1a1a1a; --muted:#666; --bg:#f7f7f8; --card:#fff; --border:#ddd; }
     * { box-sizing:border-box; }
     body { font-family: system-ui,-apple-system,'Segoe UI',Roboto,Arial,sans-serif; margin:0; background:var(--bg); color:var(--text); }
-    header { background:var(--card); border-bottom:1px solid var(--border); padding:16px 20px; }
-    header h1 { margin:0; font-size:1.2rem; font-weight:700; }
-    header .subtitle { font-size:.9rem; color:var(--muted); }
-    main { max-width:960px; margin:24px auto; padding:0 16px; }
-    .card { background:var(--card); border:1px solid var(--border); border-radius:12px; padding:16px; box-shadow:0 1px 2px rgba(0,0,0,.04); }
-    label { font-weight:600; display:block; margin:12px 0 8px; }
-    select { width:100%; padding:10px 12px; border:1px solid var(--border); border-radius:8px; font-size:1rem; }
-    .section-title { font-size:1.1rem; font-weight:700; margin:0 0 8px; }
-    .hint { color:var(--muted); font-size:.9rem; }
-    .panel { margin-top:12px; padding:12px; border:1px dashed var(--border); border-radius:8px; background:#fff; }
-    .contacts { white-space:pre-wrap; }
-    .brand { color:var(--brand-red); font-weight:800; }
-    .footer { color:var(--muted); font-size:.85rem; text-align:center; margin:24px 0 40px; }
-    .badge { display:inline-block; background:#f2f2f2; color:#333; border:1px solid var(--border); border-radius:999px; padding:2px 8px; font-size:.8rem; margin-left:8px; }
-    .copy { margin-top:8px; }
-    button.copy-btn { padding:8px 10px; border:1px solid var(--border); border-radius:8px; background:#fff; cursor:pointer; }
+    header { background:var(--card); border-bottom:2px solid var(--brand-red); padding:32px 20px 16px 20px; text-align:center; }
+    .logo { font-size:2.8rem; font-weight:900; color:var(--brand-red); letter-spacing:2px; margin-bottom:8px; }
+    .main-title { font-size:2.2rem; font-weight:800; margin:0 0 8px 0; color:var(--text); }
+    .subtitle { font-size:1.15rem; color:var(--muted); margin-bottom:0; }
+    main { max-width:600px; margin:32px auto; padding:0 16px; }
+    .card { background:var(--card); border:1.5px solid var(--border); border-radius:18px; padding:32px 24px; box-shadow:0 2px 8px rgba(0,0,0,.06); }
+    .landing-message { font-size:1.2rem; font-weight:600; color:var(--brand-red); margin-bottom:24px; text-align:center; }
+    label { font-weight:700; font-size:1.15rem; display:block; margin:24px 0 12px; }
+    select { width:100%; padding:14px 16px; border:1.5px solid var(--border); border-radius:10px; font-size:1.1rem; margin-bottom:16px; }
+    .section-title { font-size:1.25rem; font-weight:800; margin:0 0 12px; color:var(--brand-red); }
+    .hint { color:var(--muted); font-size:1.05rem; margin-bottom:16px; }
+    .panel { margin-top:24px; padding:24px; border:1.5px dashed var(--border); border-radius:12px; background:#fff; }
+    .contacts { white-space:pre-wrap; font-size:1.1rem; margin-top:12px; }
+    .badge { display:inline-block; background:#f2f2f2; color:#333; border:1px solid var(--border); border-radius:999px; padding:4px 14px; font-size:1rem; margin-left:12px; font-weight:700; }
+    .copy { margin-top:16px; }
+    button.copy-btn { padding:12px 18px; border:1.5px solid var(--border); border-radius:10px; background:#fff; cursor:pointer; font-size:1rem; font-weight:600; }
     button.copy-btn:hover { background:#f6f6f6; }
+    .footer { color:var(--muted); font-size:1rem; text-align:center; margin:32px 0 40px; }
+    @media (max-width:600px) {
+      .card { padding:18px 6px; }
+      main { padding:0 2px; }
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1><span class="brand">Honeywell</span> Incident Reporting</h1>
-    <div class="subtitle">Contacts for Honeywell US, Honeywell Canada, and Contingent Labor Providers (no QR codes).</div>
+    <div class="logo">Honeywell</div>
+    <div class="main-title">Incident Reporting</div>
+    <div class="subtitle">Early reporting is critical for a successful case management.</div>
   </header>
   <main>
     <div class="card">
-      <label for="category">Select category</label>
+      <div class="landing-message">
+        Please notify your Honeywell Supervisor about your incident first.<br>
+        Then, select your staffing company to view contact details for reporting.
+      </div>
+      <label for="category">Select Your Employer or Staffing Company</label>
       <select id="category" aria-label="Select reporting category">
         <option value="contingent">Contingent Labor Providers</option>
         <option value="us">Honeywell US</option>
@@ -45,47 +56,40 @@
       <div id="cont-panel" class="panel">
         <div class="section-title">Contingent Labor Providers</div>
         <div class="hint">
-          Please notify your Honeywell Supervisor about your incident first. Then, select your staffing company to view contact details for reporting.
+          Contractors and Contingent Workers should immediately contact their company and follow their instructions.
         </div>
-
-        <!-- Single dropdown of all staffing companies -->
-        <label for="provider">Select staffing company</label>
+        <label for="provider">Select Your Staffing Company</label>
         <select id="provider" aria-label="Select staffing company"></select>
-
-        <!-- Details appear immediately after selection -->
-        <div class="contacts" id="provider-contact" style="margin-top:8px">
+        <div class="contacts" id="provider-contact">
           Select a company to view HSE contact details.
         </div>
-
         <div class="copy">
           <button class="copy-btn" id="copy-btn" disabled>Copy contact details</button>
         </div>
       </div>
 
-      <!-- US (no QR) -->
+      <!-- US -->
       <div id="us-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – US <span class="badge">Care On Site</span></div>
         <div class="contacts">
-          <strong>Phone:</strong> 844-501-2273
-          <br/>
-          <strong>Important:</strong> Please report all work related injuries immediately to your supervisor.
+          <strong>Phone:</strong> 844-501-2273<br>
+          <strong>Important:</strong> Please report all work related injuries immediately to your supervisor.<br>
+          <strong>HSE Contact:</strong> (502) 974-0422, (346) 640-2723
         </div>
       </div>
 
-      <!-- Canada (no QR) -->
+      <!-- Canada -->
       <div id="ca-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – Canada <span class="badge">Windley Ely Nurse Triage</span></div>
         <div class="contacts">
-          <strong>Phone:</strong> 877-424-5256
-          <br/>
-          <strong>Important:</strong> Please report all work related injuries immediately to your supervisor.
+          <strong>Phone:</strong> 877-424-5256<br>
+          <strong>Important:</strong> Please report all work related injuries immediately to your supervisor.<br>
+          <strong>HSE Contact:</strong> (502) 974-0422, (346) 640-2723
         </div>
       </div>
     </div>
-
     <div class="footer">This page works offline after the first load. No QR images used.</div>
   </main>
-
   <script>
     // Full provider list embedded below (parsed from your Excel).
     const contingentProviders = [
@@ -132,7 +136,7 @@
       const contactBox = document.getElementById('provider-contact');
       const copyBtn = document.getElementById('copy-btn');
 
-      select.innerHTML = '<option value="">— Select company —</option>';
+      select.innerHTML = '<option value="">— Select Your Staffing Company —</option>';
       contingentProviders
         .slice()
         .sort((a,b) => a.name.toLowerCase().localeCompare(b.name.toLowerCase()))
@@ -159,7 +163,6 @@
       copyBtn.addEventListener('click', async () => {
         try { await navigator.clipboard.writeText(contactBox.textContent); copyBtn.textContent = 'Copied!'; setTimeout(() => (copyBtn.textContent = 'Copy contact details'), 1500); } catch (e) {}
       });
-    })();
+       })();
   </script>
 </body>
-</
