--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     .hint { color:var(--muted); font-size:1.05rem; margin-bottom:16px; }
     .panel { margin-top:24px; padding:24px; border:1.5px dashed var(--border); border-radius:12px; background:#fff; }
     .contacts { white-space:pre-wrap; font-size:1.1rem; margin-top:12px; }
-    .big-contact { font-size:2rem; font-weight:900; color:var(--brand-red); margin:18px 0 10px 0; letter-spacing:1px; }
-    .big-label { font-size:1.25rem; font-weight:700; margin-bottom:8px; color:var(--text); }
-    .fleet-contact { font-size:1.5rem; font-weight:900; color:#337ab7; margin:10px 0 10px 0; letter-spacing:1px; }
     .badge { display:inline-block; background:#f2f2f2; color:#333; border:1px solid var(--border); border-radius:999px; padding:4px 14px; font-size:1rem; margin-left:12px; font-weight:700; }
     .copy { margin-top:16px; }
     button.copy-btn { padding:12px 18px; border:1.5px solid var(--border); border-radius:10px; background:#fff; cursor:pointer; font-size:1rem; font-weight:600; }
@@ -32,9 +29,6 @@
     @media (max-width:600px) {
       .card { padding:18px 6px; }
       main { padding:0 2px; }
-      .big-contact { font-size:1.3rem; }
-      .fleet-contact { font-size:1.1rem; }
-      .big-label { font-size:1rem; }
     }
   </style>
 </head>
@@ -73,41 +67,21 @@
         </div>
       </div>
 
-      <!-- US (extra large, bold, aligned) -->
+      <!-- US (concise, focus: Care On Site, no HSE contacts) -->
       <div id="us-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – US <span class="badge">Care On Site 24/7 Hotline</span></div>
         <div class="contacts">
-          <div class="big-label">Report any work-related Injury immediately to your supervisor &amp; Honeywell Hotline:</div>
-          <div class="big-contact">Care On Site<br>(844) 501-2273</div>
-          <div style="margin:24px 0 0 0;"></div>
-          <div class="big-label">Vehicle Accidents involving Company Vehicles:</div>
-          <div style="margin-bottom:8px;">
-            Regardless of injury, report to the Honeywell Hotline (<span style="font-weight:900;color:var(--brand-red);">Care On Site, (844) 501-2273</span>)
-            and call the Element Fleet Management Center:
-          </div>
-          <div class="fleet-contact">Element Fleet Management Center<br>(800) 641-0062</div>
-          <div style="margin-top:8px;">
-            Along with any reports required by local Law Enforcement Agencies.
-          </div>
+          <strong>Report any work-related Injury immediately</strong> to your supervisor &amp; Honeywell Hotline <strong>(Care On Site, (844) 501-2273)</strong>.<br><br>
+          <strong>Vehicle Accidents</strong> involving Company Vehicles (regardless of injury) are reported to the Honeywell Hotline <strong>(Care On Site, (844) 501-2273)</strong> &amp; require a call to the <strong>Element Fleet Management Center (800) 641-0062</strong> along with any reports required by local Law Enforcement Agencies.
         </div>
       </div>
 
-      <!-- Canada (extra large, bold, aligned) -->
+      <!-- Canada (concise, focus: Windley Ely, no HSE contacts) -->
       <div id="ca-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – Canada <span class="badge">Windley Ely Nurse Triage</span></div>
         <div class="contacts">
-          <div class="big-label">Report any work-related Injury immediately to your supervisor &amp; Honeywell Hotline:</div>
-          <div class="big-contact">Windley Ely Nurse Triage<br>(877) 424-5256</div>
-          <div style="margin:24px 0 0 0;"></div>
-          <div class="big-label">Vehicle Accidents involving Company Vehicles:</div>
-          <div style="margin-bottom:8px;">
-            Regardless of injury, report to the Honeywell Hotline (<span style="font-weight:900;color:var(--brand-red);">Windley Ely Nurse Triage, (877) 424-5256</span>)
-            and call the Element Fleet Management Center:
-          </div>
-          <div class="fleet-contact">Element Fleet Management Center<br>(800) 411-8500</div>
-          <div style="margin-top:8px;">
-            Along with any reports required by local Law Enforcement Agencies.
-          </div>
+          <strong>Report any work-related Injury immediately</strong> to your supervisor &amp; Honeywell Hotline <strong>(Windley Ely Nurse Triage, (877) 424-5256)</strong>.<br><br>
+          <strong>Vehicle Accidents</strong> involving Company Vehicles (regardless of injury) are reported to the Honeywell Hotline <strong>(Windley Ely Nurse Triage, (877) 424-5256)</strong> &amp; require a call to the <strong>Element Fleet Management Center (800) 411-8500</strong> along with any reports required by local Law Enforcement Agencies.
         </div>
       </div>
     </div>
@@ -187,5 +161,5 @@
         try { await navigator.clipboard.writeText(contactBox.textContent); copyBtn.textContent = 'Copied!'; setTimeout(() => (copyBtn.textContent = 'Copy contact details'), 1500); } catch (e) {}
       });
     })();
-  </script  </script>
-</body>
+  </script>
+</</body>
